@@ -17,14 +17,23 @@ Support for GTK 1.0 has been dropped. This version has
 been tested with GTK 1.2.3 and GTK 1.2.6 - it is known
 not work with some other versions.
 
+wxChoice can now handle only either void client data
+(which it will not delete on destruction) or client
+data of the wxClientData type (which it will delete),
+instead of both at the same time. The same will happen
+to wxListBox and wxComboBox some time.
+
 Many build fixes for various platforms have been applied,
 try again, poor HP-UX and *BSD users, but don't reckon
 with immediate success. Actually, when using GNU compilers,
 your chances are quite good.
 
-My total rewrite of the wxWindows underlying GTK widget
+My rewrite of the wxWindows underlying GTK widget
 has turned scrolling including subwindows from barely
-functional to pretty and fast.
+functional to pretty and fast. I also added scrolling
+of foreign windows to wxScrolledWindow.
+
+Setting size hints for the window manager might work now.
 
 wxSocket and Co. have been improved up to the point of
 calling it a rewrite. It works on wxMSW now too and
@@ -40,7 +49,7 @@ Several printing things fixed.
 
 HTML widget and the wxWindows' help system based upon
 it have been reorganized and improved for easier use
-from Python and C++.
+from Python and C++. Also HTML printing has been added.
 
 wxSpinCtrl added. Like a wxSpinButton and a wxTextCtrl.
 
